# imgui-editor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LEARN.md  LICENSE  README.md  imgui-editor.sln  vcpkg.json
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: codeql.yml
codegen-cli/: cmd.go  go.mod
codegen-cli/internal/: generator.go  json.go
imgui-editor/: CMakeLists.txt  defines.h  entry.cpp  entry.hpp  imgui-editor.vcxproj  imgui-editor.vcxproj.filters
imgui-editor/dependencies/assets/: SFUIDisplay.hpp
imgui-editor/dependencies/console/: console.cpp  console.hpp
imgui-editor/dependencies/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_internal.h  imgui_tweaker.hpp  imgui_widgets.cpp
imgui-editor/dependencies/md5/: md5.cpp  md5.hpp
imgui-editor/dependencies/modals/: modals.cpp  modals.hpp
imgui-editor/dependencies/notifies/: notifies.cpp  notifies.h
imgui-editor/dependencies/security/: FNV1A.hpp  XorStr.hpp
imgui-editor/src/: context.hpp
imgui-editor/src/filesystem/: filesystem.cpp  filesystem.hpp
imgui-editor/src/history/: history.cpp  history.hpp
imgui-editor/src/imgui/: imgui_impl_dx9.cpp  imgui_tweaker.cpp  imgui_tweaker.hpp
imgui-editor/src/installer/: installerSystem.cpp  installerSystem.hpp
imgui-editor/src/interface/: elements.hpp  homepage.cpp  homepage.hpp  interface.cpp  interface.hpp  transformDrawlist.hpp
imgui-editor/src/layerSystem/: layerManagement.cpp  layerManagement.hpp  layerSystem.cpp  layerSystem.hpp
imgui-editor/src/projects/: projectSystem.cpp  projectSystem.hpp
imgui-editor/src/prototypeSystem/: prototypeSystem.cpp  prototypeSystem.hpp
imgui-editor/src/utils/: utils.hpp  workspaceKeybinds.cpp  workspaceKeybinds.hpp
imgui-editor/src/workspace/: prototypeItems.hpp  prototypeMananger.cpp  prototypeMananger.hpp  windowSettings.cpp  windowSettings.hpp
imgui-editor/src/workspace/widgets/: checkboxSettings.cpp  checkboxSettings.hpp
